--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ pandas = "^1.2.3"
 numpy = "^1.20.2"
 jupyter = "^1.0.0"
 nltk = "^3.6.1"
+scikit-learn = "^0.24.1"
+tweepy = "^3.10.0"
+matplotlib = "^3.4.1"
 
 [tool.poetry.dev-dependencies]
 
